Add overrides to ESLint configuration
My experience has led me to many warnings thrown in my test files. This
specifically targets my test files and ignores the rules that I
struggled to work around.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-    "extends": "airbnb"
+  "extends": "airbnb",
+  "overrides": [
+    {
+      "files": [
+        "**/*spec.js*",
+        "**/*test.js*"
+      ],
+      "rules": {
+        "import/no-extraneous-dependencies": "off",
+        "no-undef": "off",
+        "no-unused-expressions": "off"
+      }
+    }
+  ]
 }
