--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,15 @@
         "no-undef": "off",
         "no-unused-expressions": "off"
       }
+    },
+    {
+      "files": [
+        "**/*stories.js*"
+      ],
+      "rules": {
+        "import/no-extraneous-dependencies": "off",
+        "no-console":"off"
+      }
     }
   ]
 }
