--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@storybook/react": "^3.3.14",
     "@storybook/addon-actions": "^3.3.14",
+    "@storybook/addon-console": "^1.0.0",
+    "@storybook/addon-info": "^3.3.14",
     "@storybook/addon-links": "^3.3.14",
-    "@storybook/addons": "^3.3.14"
+    "@storybook/addons": "^3.3.14",
+    "@storybook/react": "^3.3.14"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
